<resources>
    <string name="app_name">Astro Dating</string>
    <string name="label_google_sign_in">Google Sign In</string>
    <string name="label_welcome">Welcome to Astro Dating</string>
    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_account">Create Account</string>
    <string name="verify_email">Verify Email</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed Out</string>
    <string name="searchPartner">Search</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="google_status_fmt"> Google Account: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="label_register">Register New Account</string>
    <string name="register">Sign up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="login">LOG IN</string>
    <string name="searchOption">Search Partner</string>
    <string name="fname">First Name:</string>
    <string name="lname">Last Name:</string>
    <string name="height">Height, cm:</string>
    <string name="weight">Weight, kg:</string>
    <string name="hobby">Hobby:</string>
    <string name="register1">Register</string>
    <string name="opt1">Find Partner by Sign Element</string>
    <string name="opt2">Find Partner by Zodiac Sign</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_find_partner">Find Partner</string>
    <string name="userProfile">User Profile</string>
    <string name="label_profile">User Profile</string>
    <string name="match2">Match Now</string>
    <string name="match1">Match Now</string>
    <string name="aries">20 Mar-19 Apr</string>
    <string name="libra">23 Sept-23 Oct</string>
    <string name="taurus">20 Apr-20 May</string>
    <string name="gemini">21 May-20 Jun</string>
    <string name="cancer">21 Jun-22 Jul</string>
    <string name="leo">23 Jul-22 Aug</string>
    <string name="vigro">23 Aug-22 Sept</string>
    <string name="scorpio">24 Oct-21 Nov</string>
    <string name="sagittarius">22 Nov-21 Dec</string>
    <string name="capricorn">22 Dec-19 Jan</string>
    <string name="aquarius">20 Jan-18 Feb</string>
    <string name="pisces">19 Feb-19 Mar</string>
    <string name="aries1">Aries</string>
    <string name="taurus1">Taurus</string>
    <string name="gemini1">Gemini</string>
    <string name="cancer1">Cancer</string>
    <string name="leo1">Leo</string>
    <string name="virgo1">Virgo</string>
    <string name="libra1">Libra</string>
    <string name="scorpio1">Scorpio</string>
    <string name="sagittarius1">Sagittarius</string>
    <string name="capricorn1">Capricorn</string>
    <string name="aquarius1">Aquarius</string>
    <string name="pisces1">Pisces</string>
    <string name="first_result">The Best Matches By Element</string>
    <string name="welcomeText">Welcome to AstroDating</string>
    <string name="second_result">The Best Matches By Sign</string>
    <string name="result_warning">Disclaimer! Readings and statements provided are for entertainment purposes only!</string>
    <string name="userDelete">Delete User Profile</string>
    <string name="label_deleteprofile">Delete User Profile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="userEdit">Edit User Profile</string>
    <string name="edit">Edit Profile</string>
    <string name="label_editprofile">Edit Profile</string>

</resources>
